finish splash page styling

--- a/app/views/pages/splash.html.erb
+++ b/app/views/pages/splash.html.erb
@@ -1,4 +1,28 @@
 <%= render partial: "shared/banner" %>
-<%= render partial: "shared/categories" %>
-<%= render partial: "shared/popular", locals: { sample:@sample } %>
-<%= render partial: "shared/contact" %>
+<div class="mainbody">
+  <div class="container">
+    <div id="featured">
+      <div class="featured-members-text">
+        <h3>FEATURED MEMBERS</h3>
+        <h5>Looking for guaranteed returns? These members have proven themselves with timely payments on previous loans.</h5>
+      </div>
+      <div class="autoplay" id="auto">
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/200x200" /></a></div>
+        <div><a href="#"><img src="http://www.placehold.it/300x300" /></a></div>
+      </div>
+      <div id="featured-list">
+        <li><a href="#"><img src="http://www.placehold.it/200x200" /></a></li>
+        <li><a href="#"><img src="http://www.placehold.it/200x200" /></a></li>
+        <li><a href="#"><img src="http://www.placehold.it/200x200" /></a></li>
+        <li><a href="#"><img src="http://www.placehold.it/200x200" /></a></li>
+      </div>
+    </div>
+  </div>
+</div>
