--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,16 +1,9 @@
-
 <div class="footer">
-	 <div class="container wrap">
-		<div class="logo2">
-			 <a href="/"><%= image_tag "logo2" %></a>
+		<div class="container">
+			<ul id="nav">
+				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Terms of Service</a></li>
+			</ul>
 		</div>
-		<div class="ftr-menu">
-			 <ul>
-				 <li><a href="/meats">DINOSAUR MEAT</a></li>
-				 <li><a href="/eggs">DINOSAUR EGGS</a></li>
-				 <li><a href="/plants">PLANTS</a></li>
-			 </ul>
-		</div>
-		<div class="clearfix"></div>
-	 </div>
 </div>
