--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nachomoms Paleo Store</title>
   <%= render partial: "shared/head" %>
 </head>
 <body>
-  <div id="pagewrap">
-    <%= render partial: "shared/shortbanner" unless @disable_nav %>
+  <div class="wrapper">
+    <%= render partial: "shared/navbar"%>
+
     <% flash.each do |type, message| %>
-    <%= content_tag :div, message.html_safe, class: type %>
+      <%= content_tag :div, message.html_safe, class: type %>
     <% end %>
-    <div id="main_body">
-      <%= yield %>
+
+    <%= yield %>
+
     <%= render partial: "shared/footer" %>
+    <%= render partial: "shared/bscript" %>
   </div>
 
 </body>
