fix route namespacing

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
           </td>
         </tr>
       </table>
-      <div class= "btn"><%= link_to "Create a Loan Request", new_user_loan_request_path %></div>
+      <div class= "btn"><%= link_to "Create a Loan Request", new_loan_request_path %></div>
     </div>
   </div>
 </div>
