--- a/app/views/loan_requests/new.html.erb
+++ b/app/views/loan_requests/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create New Loan Request:</h1>
 
-<%= form_for [:user, @loan_request] do |f|%>
+<%= form_for @loan_request do |f|%>
   <%= f.text_field :amount, placeholder: "Loan Amount" %>
   <%= f.text_field :max_int_rate, placeholder: "Maximum Interest Rate" %>
   <%= f.submit "Submit Loan Request" %>
