--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,6 +44,7 @@
         </tr>
       </table>
       <div class= "btn"><%= link_to "Create a Loan Request", new_loan_request_path %></div>
+      <div class= "btn"><%= link_to "View My Loan Requests", user_loan_requests_path(@user) %></div>
     </div>
   </div>
 </div>
