--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,9 @@
         </tr>
       </table>
       <div class= "btn"><%= link_to "Create a Loan Request", new_loan_request_path %></div>
-      <div class= "btn"><%= link_to "View My Loan Requests", user_loan_requests_path(@user) %></div>
+      <div class= "btn"><%= link_to "View My Loan Requests", user_loan_requests_path(@user.username) %></div><br>
+      <div class= "btn"><%= link_to "Create a Loan Offer", new_loan_offer_path %></div>
+      <div class= "btn"><%= link_to "View My Loan Offers", user_loan_offers_path(@user.username) %></div>
     </div>
   </div>
 </div>
