--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,15 @@
 <header class="header">
   <div class="container">
-    <%= image_tag "thrivelogo", height: "100px" %>
+    <%= link_to (image_tag("thrivelogo", height: "100px")), root_path %>
+    <%# image_tag "thrivelogo", height: "100px" %>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
         <li><a href="#">View Loans</a></li>
         <li><a href="#">Create Loan</a></li>
-        <li><a href="#">Login</a></li>
+        <% if @current_user %>
+          <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
+        <% else %>
+          <li><%= link_to "Log In", login_path %></li>
+        <% end %>
         <li><a href="#">Register</a></li>
       </ul>
   </div>
