--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,76 @@
-<div class="cart">
-	<div class="container">
-		<div class="cart-top">
-      <h1> <%= @user.first_name %>'s Profile</h1>
-    </div>
-    <div class="cart-conclusion">
-      <table width="500px">
-        <tr>
-          <td>
-            Name
-          </td>
-          <td>
-            <%= @user.first_name %> <%= @user.last_name %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            E-Mail
-          </td>
-          <td>
-            <%= @user.email %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Address
-          </td>
-          <td>
-            <%= @user.address %>, <%= @user.city %>, <%= @user.state %> <%= @user.zipcode %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Number of Orders
-          </td>
-          <td>
-            <%= @orders.size %>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <%= render partial: "shared/orders", locals: { orders:@orders } %>
-          </td>
-        </tr>
-      </table>
-
-    </div>
-  </div>
+<div class="container">
+	<div class="row user-dashboard">
+		<h1>Hello, <%= @user.first_name %></h1>
+		<div class="col-md-4 stats">
+			<table class="table table-striped table-bordered">
+				<tr>
+					<td>
+						<b>Loan Offerings</b>
+					</td>
+					<td>
+						<b>#</b>
+					</td>
+				</tr>
+				<tr>
+					<td>Outstanding Loan Offerings</td>
+					<td>3</td>
+				</tr>
+				<tr>
+					<td>Approved Loan Offerings</td>
+					<td>4</td>
+				</tr>
+				<tr>
+					<td>Total Invested in Loan Offerings</td>
+					<td><%= number_to_currency("120000") %></td>
+				</tr>
+			<tr>
+				<td colspan="2">
+				</td>
+			</tr>
+				<tr>
+					<td>
+						<b>Loan Requests</b>
+					</td>
+					<td>
+						<b>#</b>
+					</td>
+				</tr>
+				<tr>
+					<td>Outstanding Loan Requests</td>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td>Approved Loan Requests</td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td>Total Owed in Loan Requests</td>
+					<td><%= number_to_currency("6000") %></td>
+				</tr>
+				<tr>
+					<td colspan="2s">
+					</td>
+				</tr>
+				<tr>
+					<td><b>Portfolio Net Worth</b></td>
+					<td><b><%= number_to_currency("114000") %></b></td>
+				</tr>
+			</table>
+		</div>
+		<div class="col-md-3 user-menu">
+			<nav>
+				<ul class="nav nav-pills nav-stacked">
+					<li role="presentation"><a href="#">Edit My Profile</a></li>
+					<li role="presentation"><a href="#">Create New Loan Offering</a></li>
+					<li role="presentation"><a href="#">Create New Loan Request</a></li>
+					<li role="presentation"><a href="#">View Open Loan Offerings</a></li>
+					<li role="presentation"><a href="#">View Past Loan Offerings</a></li>
+					<li role="presentation"><a href="#">View Open Loan Requests</a></li>
+					<li role="presentation"><a href="#">View Past Loan Requests</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class="col-md-3 user-menu">
+		</div>
+	</div>
 </div>
