--- a/app/views/loan_offers/new.html.erb
+++ b/app/views/loan_offers/new.html.erb
@@ -1,9 +1,23 @@
-<h2>Offer up a loan today, so tomorrow you'll get paid!</h2>
-<p>*loans usually take more than a day to be repaid, and return values vary</p><br />
-
-<%= form_for @loan_offer do |f| %>
-  <%= f.text_field :amount, placeholder: "Amount", class:"form-control"  %><br />
-  <%= f.text_field :rate, placeholder: "Rate", class:"form-control"  %><br />
-  <%= f.text_field :term, placeholder: "Term", class:"form-control"  %><br />
-  <%= f.submit "Sign me up", class:"btn btn-primary"%>
-<% end %>
+<div class="mainbody">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 signup">
+        <h2>Offer up a loan today,<br />so tomorrow you'll get paid!</h2>
+        <p>*loans usually take more than a day to be repaid, and return values vary</p><br />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 col-md-offset-5">
+        <%= form_for @loan_offer do |f| %>
+          <%= f.label :amount, "Amount in Dollars: " %><br />
+          <%= f.text_field :amount, placeholder: "10000", class:"form-control"  %><br />
+          <%= f.label :rate, "Rate as a Percentage: " %><br />
+          <%= f.text_field :rate, placeholder: "14.99", class:"form-control"  %><br />
+          <%= f.label :term, "Term in Months: " %><br />
+          <%= f.text_field :term, placeholder: "48", class:"form-control"  %><br />
+          <%= f.submit "Let's Go!"%>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
