--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,16 @@
 <header class="header">
   <div class="container">
     <%= link_to (image_tag("thrivelogo", height: "100px")), root_path %>
-    <%# image_tag "thrivelogo", height: "100px" %>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
         <li><a href="#">View Loans</a></li>
         <li><a href="#">Create Loan</a></li>
-        <% if @current_user %>
+        <% if current_user %>
           <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
+          <li><%= link_to "Dashboard", dashboard_path %></li>
         <% else %>
           <li><%= link_to "Log In", login_path %></li>
+          <li><a href="#">Register</a></li>
         <% end %>
-        <li><a href="#">Register</a></li>
       </ul>
   </div>
 </header>
