--- a/app/views/user/loan_offers/show.html.erb
+++ b/app/views/user/loan_offers/show.html.erb
@@ -1,4 +1,14 @@
-<h2><%= "#{@user.first_name} #{@user.last_name}" %></h2>
+<div class="mainbody">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2><%= "#{@user.first_name} #{@user.last_name}" %></h2>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
 <ul>
 <li>amount: $<%= @loan_offer.amount %></li>
