got to the end of a clusterfuck of life

--- a/app/views/user/loan_requests/index.html.erb
+++ b/app/views/user/loan_requests/index.html.erb
@@ -7,7 +7,7 @@
 				<% @user.loan_requests.each.with_index(1) do |req, i| %>
 					<div class="list-group">
 						<div class="list-group-item">
-							<h4>Offer #<%= i %></h4>
+							<h4>Request #<%= i %></h4>
 						</div>
 						<div class="list-group-item">
 							<h4 class="list-group-item-heading">Amount:</h4>
