test suite expansion

--- a/app/views/loan_offers/edit.html.erb
+++ b/app/views/loan_offers/edit.html.erb
@@ -9,5 +9,5 @@
   <%= f.label "Term" %>
   <%= f.text_field :term, class:"form-control"  %>
   <%= f.label "Months" %><br />
-  <%= f.submit "That was easy", class:"btn btn-primary"%>
+  <%= f.submit "That Was Easy", class:"btn btn-primary"%>
 <% end %>
