--- a/app/views/user/loan_requests/show.html.erb
+++ b/app/views/user/loan_requests/show.html.erb
@@ -2,5 +2,5 @@
 Amount: <%= @loan_request.amount %><br>
 Max Interest Rate: <%= @loan_request.max_int_rate %><br>
 
-<div class="btn"><%= link_to "Edit Loan Request", edit_loan_request_path(@loan_request) %></div>
-<div class="btn"><%= link_to "Delete Loan Request", loan_request_path(@loan_request), method: :delete %></div>
+<div class="btn"><%= link_to "Edit Request", edit_loan_request_path(@loan_request) %></div>
+<div class="btn"><%= link_to "Delete Request", loan_request_path(@loan_request), method: :delete %></div>
