cart functionality and basic styling

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,7 @@
           <li><%= link_to "Log In", login_path %></li>
           <li><a href="#">Register</a></li>
         <% end %>
+      <li><%= link_to "Cart", cart_path %></li>
       </ul>
   </div>
 </header>
