--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -344,4 +344,9 @@ input[type=submit]:active {
 	background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
 	background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
 }
+
+.cart-box {
+	margin-bottom: 60px;
+}
+
 /*LOGIN FORM END*/
