--- a/app/views/loan_offers/index.html.erb
+++ b/app/views/loan_offers/index.html.erb
@@ -6,5 +6,6 @@
 	Amount: <%= off.amount %><br>
 	Interest Rate: <%= off.rate %><br>
 	Term: <%= off.term %><br>
+	<div class="btn"><%= link_to "Add To Cart", cart_items_path(class: off.class, item_id: off.id), method: 'post' %></div>
 </div>
 <% end %>
