--- a/app/views/loan_requests/index.html.erb
+++ b/app/views/loan_requests/index.html.erb
@@ -5,5 +5,6 @@
 	Loan Request # <%= req.id %><br>
 	Amount: <%= req.amount %><br>
 	Max Interest Rate: <%= req.max_int_rate %><br>
+	<%= button_to "Add to Cart", cart_items_path(item_id: req.id), class:"btn" %><br>
 </div>
 <% end %>
