--- a/app/views/user/loan_offers/index.html.erb
+++ b/app/views/user/loan_offers/index.html.erb
@@ -1,28 +1,43 @@
 <div class="mainbody">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2><%= "#{@user.first_name} #{@user.last_name}" %>'s Loan Offers</h2>
-          <% @loan_offers.each.with_index(1) do |loan_offer, i| %>
-          <div class="list-group">
-            <div class="list-group-item">
-              <h4 class="list-group-item-heading">Offer #<%= i %></h4>
-            </div>
-            <div class="list-group-item">
-              <h4 class="list-group-item-heading">Amount:</h4>
-              <p class="list-group-item-text"><%= number_to_currency(loan_offer.amount) %></p>
-            </div>
-            <div class="list-group-item">
-              <h4 class="list-group-item-heading">Interest Rate:</h4>
-              <p class="list-group-item-text"><%= loan_offer.rate %></p>
-            </div>
-            <div class="list-group-item">
-              <h4 class="list-group-item-heading">Term:</h4>
-              <p class="list-group-item-text"><%= loan_offer.term %> months</p>
-            </div>
-          </div>
-          <% end %>
+      <div class="col-md-8 col-md-offset-2">
+        <h2><%= @user.username.capitalize %>'s Loan Offers</h2>
       </div>
+    </div>
+    <div class="row">
+      <% @loan_offers.each_slice(4) do |loans| %>
+        <div class="row">
+          <% loans.each.with_index(1) do |loan, index| %>
+            <% if index == 1 %>
+              <div class="col-md-2 col-md-offset-2">
+            <% else %>
+              <div class="col-md-2">
+            <% end %>
+              <div class="list-group">
+                <div class="list-group-item">
+                  <h4 class="list-group-item-heading">Offer ID #<%= loan.id %></h4>
+                </div>
+                <div class="list-group-item">
+                  <h4 class="list-group-item-heading">Amount:</h4>
+                  <p class="list-group-item-text"><%= number_to_currency(loan.amount) %></p>
+                </div>
+                <div class="list-group-item">
+                  <h4 class="list-group-item-heading">Interest Rate:</h4>
+                  <p class="list-group-item-text"><%= loan.rate %></p>
+                </div>
+                <div class="list-group-item">
+                  <h4 class="list-group-item-heading">Term:</h4>
+                  <p class="list-group-item-text"><%= loan.term %> months</p>
+                </div>
+                <div class="list-group-item">
+                  <%= link_to "View Details", user_loan_offer_path(username: @user.username, id: loan) %>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
