--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -258,7 +258,6 @@ p a:hover {
 }
 
 input {
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
 	outline: none;
 }
@@ -315,33 +314,23 @@ input[type=checkbox] {
 	text-shadow: 0 1px 0 #fff;
 }
 
-input[type=submit] {
+input[type=submit], .link-button, .link-button:hover {
 	float: right;
 	margin-right: 20px;
-	margin-top: 20px;
-	width: 80px;
+	/*margin-top: 20px;*/
+  padding:6px;
+	/*width: 80px;*/
 	height: 30px;
 	font-size: 14px;
 	font-weight: bold;
 	color: #fff;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#acd6ef), to(#6ec2e8));
-	background-image: -moz-linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
-	background-image: linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
-	border-radius: 30px;
-	border: 1px solid #66add6;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, .3), inset 0 1px 0 rgba(255, 255, 255, .5);
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#669900), to(#669900));
+	background-image: -moz-linear-gradient(top left 90deg, #669900 0%, #669900 100%);
+	background-image: linear-gradient(top left 90deg, #669900 0%, #669900 100%);
+	border-radius: 10px;
+	border: 2px solid #669900;
 	cursor: pointer;
+  text-decoration: none;
 }
 
-input[type=submit]:hover {
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e2ff), to(#6ec2e8));
-	background-image: -moz-linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
-	background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
-}
-
-input[type=submit]:active {
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#6ec2e8), to(#b6e2ff));
-	background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-	background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-}
 /*LOGIN FORM END*/
