--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
         <li><a href="#">View Loans</a></li>
         <li><a href="#">Create Loan</a></li>
         <% if current_user %>
-          <li><%= button_to "Log Out", logout_path, method: "delete", class:"navbutt" %></li>
+          <li><%= link_to "Log Out", logout_path %></li>
           <li><%= link_to "Dashboard", dashboard_path %></li>
         <% else %>
           <li><%= link_to "Log In", login_path %></li>
