--- a/app/views/user/loan_requests/index.html.erb
+++ b/app/views/user/loan_requests/index.html.erb
@@ -1,25 +1,39 @@
 <div class="mainbody">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-				<h2><%= @user.username.capitalize %>'s Loan Requests:</h2>
-
-				<% @user.loan_requests.each.with_index(1) do |req, i| %>
-					<div class="list-group">
-						<div class="list-group-item">
-							<h4>Request #<%= i %></h4>
-						</div>
-						<div class="list-group-item">
-							<h4 class="list-group-item-heading">Amount:</h4>
-							<p class="list-group-item-text"><%= number_to_currency(req.amount) %></p>
-						</div>
-						<div class="list-group-item">
-							<h4 class="list-group-item-heading">Max Interest Rate:</h4>
-							<p class="list-group-item-text"><%= req.max_int_rate %></p>
-						</div>
-					</div>
-				<% end %>
-			</div>
-		</div>
-	</div>
+      <div class="col-md-8 col-md-offset-2">
+        <h2><%= @user.username.capitalize %>'s Loan Requests:</h2>
+      </div>
+    </div>
+    <div class="row">
+      <% @loan_requests.each_slice(4) do |loans| %>
+      <div class="row">
+        <% loans.each.with_index(1) do |loan, index | %>
+        <% if index == 1 %>
+        <div class="col-md-2 col-md-offset-2">
+        <% else %>
+        <div class="col-md-2">
+        <% end %>
+          <div class="list-group">
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">Request ID #<%= loan.id %></h4>
+            </div>
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">Amount:</h4>
+              <p class = "list-group-item-text"><%= number_to_currency(loan.amount) %></p>
+            </div>
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">Max Interest Rate:</h4>
+              <p class="list-group-item-text"><%= loan.max_int_rate %></p>
+            </div>
+            <div class="list-group-item">
+              <%= link_to "View Details", user_loan_request_path(username: @user.username, id: loan) %>
+            </div>
+          </div>
+        </div>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
