--- a/app/views/loan_offers/index.html.erb
+++ b/app/views/loan_offers/index.html.erb
@@ -1,11 +1,46 @@
-<h1>All Loan Offers:</h1>
+<div class="mainbody">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>All Loan Offers:</h2>
+			</div>
+		</div>
+		<div class="row">
+			<% @loan_offers.each_slice(4) do |loans| %>
+				<div class="row">
+					<% loans.each.with_index(1) do |loan, index| %>
 
-<% @loan_offers.each do |off| %>
-<div class="off-<%= off.id %>">
-	Loan offer # <%= off.id %><br>
-	Amount: <%= off.amount %><br>
-	Interest Rate: <%= off.rate %><br>
-	Term: <%= off.term %><br>
-	<div class="btn"><%= link_to "Add To Cart", cart_items_path(class: off.class, item_id: off.id), method: 'post' %></div>
+
+
+							<div class="col-md-3">
+
+						<div class="list-group">
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Offer ID #<%= loan.id %></h4>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Amount:</h4>
+								<p class="list-group-item-text"><%= number_to_currency(loan.amount) %></p>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Interest Rate:</h4>
+								<p class="list-group-item-text"><%= loan.rate %></p>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Term:</h4>
+								<p class="list-group-item-text"><%= loan.term %> months</p>
+							</div>
+							<div class="list-group-item">
+								<%= link_to "View Details", user_loan_offer_path(username: loan.user.username, id: loan) %>
+							</div>
+							<div class="list-group-item bottom-button">
+								<%= link_to "Add To Cart", cart_items_path(item_id: loan.id), method: 'post', class:"link-button index-page" %>
+							</div>
+						</div>
+							</div>
+					<% end %>
+				</div>
+			<% end %>
+		</div>
+	</div>
 </div>
-<% end %>
