--- a/app/views/loan_requests/index.html.erb
+++ b/app/views/loan_requests/index.html.erb
@@ -1,10 +1,42 @@
-<h1>All Loan Requests:</h1>
-
-<% @loan_requests.each do |req| %>
-<div class="req-<%= req.id %>">
-	Loan Request # <%= req.id %><br>
-	Amount: <%= req.amount %><br>
-	Max Interest Rate: <%= req.max_int_rate %><br>
-	<%= button_to "Add to Cart", cart_items_path(item_id: req.id), class:"btn" %><br>
+<div class="mainbody">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>All Loan Requests:</h2>
+			</div>
+		</div>
+		<div class="row">
+			<% @loan_requests.each_slice(4) do |loans| %>
+				<div class="row">
+					<% loans.each.with_index(1) do |loan, index| %>
+						<div class="col-md-3">
+						<div class="list-group">
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Request ID #<%= loan.id %></h4>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Amount:</h4>
+								<p class="list-group-item-text"><%= number_to_currency(loan.amount) %></p>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Interest Rate:</h4>
+								<p class="list-group-item-text"><%# loan.rate %></p>
+							</div>
+							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Term:</h4>
+								<p class="list-group-item-text"><%# loan.term %> months</p>
+							</div>
+							<div class="list-group-item">
+								<%= link_to "View Details", user_loan_request_path(username: loan.user.username, id: loan) %>
+							</div>
+							<div class="list-group-item bottom-button">
+								<%= link_to "Add To Cart", cart_items_path(item_id: loan.id), method: 'post', class:"link-button index-page" %>
+							</div>
+						</div>
+							</div>
+					<% end %>
+				</div>
+			<% end %>
+		</div>
+	</div>
 </div>
-<% end %>
