--- a/app/views/user/loan_requests/show.html.erb
+++ b/app/views/user/loan_requests/show.html.erb
@@ -18,8 +18,12 @@
             <h4 class="list-group-item-heading col-md-6"></h4>
             <h4 class="list-group-item-heading col-md-6">Estimated Monthly Payments:<br />$183.40</h4>
           </div>
-          <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
-          <%= link_to "Edit request", edit_loan_request_path(@loan_request.id), class:"link-button" %>
+          <% if current_user == @user %>
+            <%= button_to "Delete request", loan_request_path(@loan_request.id), method: :delete %>
+            <%= link_to "Edit request", edit_loan_request_path(@loan_request.id), class:"link-button" %>
+          <% else %>
+            <%= link_to "Add To Cart", cart_items_path(item_id: @loan_request.id), method: 'post', class:"link-button" %>
+          <% end %>
           <%= link_to "Back", :back, class:"link-button" %>
         </div>
       </div>
