--- a/app/views/user/loan_requests/show.html.erb
+++ b/app/views/user/loan_requests/show.html.erb
@@ -11,7 +11,7 @@
             <h4 class="list-group-item-heading col-md-6">Interest Earning Potential: $1,147.50</h4>
           </div>
           <div class="list-group-item row">
-            <h4 class="list-group-item-heading col-md-6">APR:<br /><%= @loan_request.max_int_rate %>%</h4>
+            <h4 class="list-group-item-heading col-md-6">APR:<br /><%= @loan_request.rate %>%</h4>
             <h4 class="list-group-item-heading col-md-6">Effective Interest:<br />17.35%</h4>
           </div>
           <div class="list-group-item row">
