--- a/app/views/loan_requests/edit.html.erb
+++ b/app/views/loan_requests/edit.html.erb
@@ -11,8 +11,8 @@
       <%= form_for @loan_request do |f| %>
         <%= f.label :amount, "Amount in Dollars:" %>
         <%= f.text_field :amount, class:"form-control" %><br />
-        <%= f.label :max_int_rate, "Max Interest Rate: " %>
-        <%= f.text_field :max_int_rate, class:"form-control" %><br />
+        <%= f.label :rate, "Rate: " %>
+        <%= f.text_field :rate, class:"form-control" %><br />
         <%= f.submit "That was easy" %>
       <% end %>
     </div>
