--- a/app/views/user/loan_requests/index.html.erb
+++ b/app/views/user/loan_requests/index.html.erb
@@ -23,8 +23,8 @@
               <p class = "list-group-item-text"><%= number_to_currency(loan.amount) %></p>
             </div>
             <div class="list-group-item">
-              <h4 class="list-group-item-heading">Max Interest Rate:</h4>
-              <p class="list-group-item-text"><%= loan.max_int_rate %></p>
+              <h4 class="list-group-item-heading">Rate:</h4>
+              <p class="list-group-item-text"><%= loan.rate %></p>
             </div>
             <div class="list-group-item">
               <%= link_to "View Details", user_loan_request_path(username: @user.username, id: loan) %>
