Admin can delete user

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <td>
-            <%= link_to "View All Users - Coming Soon!", "#" %>
+            <%= link_to "View All Users", users_path %>
           </td>
         </tr>
         <tr>
