--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
           <li><%= link_to "Log In", login_path %></li>
           <li><a href="#">Register</a></li>
         <% end %>
-      <li><%= link_to "Cart", cart_path %></li>
+      <li><%= link_to "Cart", cart_path  if !current_admin? %></li>
       </ul>
   </div>
 </header>
