--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row user-dashboard">
-		<h1><%= @user.first_name %></h1>
+		<h1>Hello, <%= @user.first_name %></h1>
 		<div class="col-md-4 stats">
 			<table class="table table-striped table-bordered">
 				<tr>
@@ -61,9 +61,10 @@
 			<nav>
 				<ul class="nav nav-pills nav-stacked">
 					<li role="presentation"><a href="#">Edit My Profile</a></li>
-					<li role="presentation"><%= link_to "View #{@user.first_name}'s Loan Offers", user_loan_offers_path(@user.username) %></li>
-					<li role="presentation"><%= link_to "View #{@user.first_name}'s Loan Requests", user_loan_requests_path(@user.username) %></li>
-					<li role="presentation"><%= link_to "Delete #{@user.first_name}'s Account", user_path(@user.id), method: :delete %></li>
+					<li role="presentation"><%= link_to "Create a Loan Offer", new_loan_offer_path %></li>
+					<li role="presentation"><%= link_to "Create a Loan Request", new_loan_request_path %></li>
+					<li role="presentation"><%= link_to "View My Loan Offers", user_loan_offers_path(@user.username) %></li>
+					<li role="presentation"><%= link_to "View My Loan Requests", user_loan_requests_path(@user.username) %></li>
 				</ul>
 			</nav>
 		</div>
