--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -6,8 +6,9 @@
 
 		<div class="col-md-9 cart-items cart-box"> 
 			<table class="table table-striped table-hover">
-				<h2>My Cart (<%= @cart.count_all %>)</h2>
-				<% @items.each do |item| %>
+				<h2>My Cart (<%= @cart.requests_count %>)</h2>
+				
+				<% @items[0].each do |item| %>
 				<tr><td>
 					<div class="cart-header">
 						<div class="cart-item-info">
@@ -29,7 +30,7 @@
 	<div class="cart-total">
 		<div class="price-details">
 			<h3>Price Details</h3>
-			<span><%= @cart.count_all %> Loan Requests</span>
+			<span><%= @cart.requests_count %> Loan Requests</span>
 			<div class="clearfix"></div>
 		</div>
 		<span class="total final"><h4 class="last-price">TOTAL: <%= number_to_currency(@cart.total_price) %>
@@ -37,7 +38,7 @@
 
 
 			<% if current_user %>
-			<% if @cart.contents.empty? %>
+			<% if @cart.contents[:requests].empty? %>
 			<% else %>
 			<%= button_to "Place Order", new_contract_path, class: "contract", method: "get" %>
 			<% end %>
