--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -6,7 +6,7 @@
 
 		<div class="col-md-9 cart-items cart-box"> 
 			<table class="table table-striped table-hover">
-				<h2>My Cart (<%= @cart.requests_count %>)</h2>
+				<h2>My Cart: All Loan Requests (<%= @cart.requests_count %>)</h2>
 				
 				<% @items[0].each do |item| %>
 				<tr><td>
@@ -14,7 +14,7 @@
 						<div class="cart-item-info">
 							<h3>Loan Request ID #<%= item.id %><span></span></h3>
 							Requested by: <%= link_to item.user.username, "/#{item.user.username}/loan_requests/" %>
-							<%= button_to "X", cart_item_path(item), class: "btn btn-warning btn-xs", method: :delete %>
+							<%= button_to "X", cart_item_path(item), class: "btn btn-warning btn-xs", method: :delete, params: {item_class: item.class} %>
 						</div>
 						<h4>Loan Amount: <%= number_to_currency(item.amount) %></h4>
 						<h4>Rate: <%= item.rate %>% </h4>
@@ -33,12 +33,57 @@
 			<span><%= @cart.requests_count %> Loan Requests</span>
 			<div class="clearfix"></div>
 		</div>
-		<span class="total final"><h4 class="last-price">TOTAL: <%= number_to_currency(@cart.total_price) %>
+		<span class="total final"><h4 class="last-price">TOTAL: <%= number_to_currency(@cart.req_price) %> in loan requests
 			<div class="clearfix"></div>
 
 
 			<% if current_user %>
-			<% if @cart.contents[:requests].empty? %>
+			<% if @cart.contents["requests"].empty? %>
+			<% else %>
+			<%= button_to "Place Order", new_contract_path, class: "contract", method: "get" %>
+			<% end %>
+			<% else %>
+			<%= button_to "Login to Checkout", login_path, method: :get, class:"contract" %>
+			<% end %>
+
+		</div>
+	</div>
+
+	<div class="col-md-9 cart-items cart-box"> 
+			<table class="table table-striped table-hover">
+				<h2>My Cart: All Loan Offers (<%= @cart.offers_count %>)</h2>
+				
+				<% @items[1].each do |item| %>
+				<tr><td>
+					<div class="cart-header">
+						<div class="cart-item-info">
+							<h3>Loan Offer ID #<%= item.id %><span></span></h3>
+							Offered by: <%= link_to item.user.username, "/#{item.user.username}/loan_offers/" %>
+							<%= button_to "X", cart_item_path(item), class: "btn btn-warning btn-xs", method: :delete, params: {item_class: item.class} %>
+						</div>
+						<h4>Loan Amount: <%= number_to_currency(item.amount) %></h4>
+						<h4>Rate: <%= item.rate %>% </h4>
+						<h4>Term: <%= item.term %> Months</h4>
+					</div>
+				</td>
+			</tr>
+			<% end %>
+		</table>
+	</div>
+
+<div class="col-md-3 total-box">
+	<div class="cart-total">
+		<div class="price-details">
+			<h3>Price Details</h3>
+			<span><%= @cart.offers_count %> Loan Offers</span>
+			<div class="clearfix"></div>
+		</div>
+		<span class="total final"><h4 class="last-price">TOTAL: <%= number_to_currency(@cart.off_price) %>in loan offers</h4>
+			<div class="clearfix"></div>
+
+
+			<% if current_user %>
+			<% if @cart.contents["requests"].empty? %>
 			<% else %>
 			<%= button_to "Place Order", new_contract_path, class: "contract", method: "get" %>
 			<% end %>
