--- a/app/views/user/loan_offers/show.html.erb
+++ b/app/views/user/loan_offers/show.html.erb
@@ -21,6 +21,8 @@
           <% if current_user == @user %>
             <%= button_to "Delete offer", loan_offer_path(@loan_offer.id), method: :delete %>
             <%= link_to "Edit offer", edit_loan_offer_path(@loan_offer.id), class:"link-button" %>
+          <% elsif current_admin? %>
+            <%= button_to "Delete offer", loan_offer_path(@loan_offer.id), method: :delete %>
           <% else %>
             <%= link_to "Add To Cart", cart_items_path(item_id: @loan_offer.id), method: 'post', class:"link-button" %>
           <% end %>
