--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,3 @@
 <% @users.each do |user| %>
-  <%= link_to user.username, user_path(user.id) %>
+  <%= link_to user.username, user_path(user.username) %>
 <% end %>
