--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -12,7 +12,12 @@
         </tr>
         <tr>
           <td>
-            <%= link_to "View All Orders - Coming Soon!", "#" %>
+            <%= link_to "View All Loan Requests", loan_requests_path %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= link_to "View All Loan Offers", loan_offers_path %>
           </td>
         </tr>
         <tr>
