--- a/app/views/loan_offers/index.html.erb
+++ b/app/views/loan_offers/index.html.erb
@@ -9,28 +9,29 @@
 			<% @loan_offers.each_slice(4) do |loans| %>
 				<div class="row">
 					<% loans.each.with_index(1) do |loan, index| %>
-							<div class="col-md-3">
-						<div class="list-group">
-							<div class="list-group-item">
-								<h4 class="list-group-item-heading">Offer ID #<%= loan.id %></h4>
-							</div>
-							<div class="list-group-item">
-								<h4 class="list-group-item-heading">Amount:</h4>
-								<p class="list-group-item-text"><%= number_to_currency(loan.amount) %></p>
-							</div>
-							<div class="list-group-item">
-								<h4 class="list-group-item-heading">Interest Rate:</h4>
-								<p class="list-group-item-text"><%= loan.rate %></p>
-							</div>
-							<div class="list-group-item">
-								<h4 class="list-group-item-heading">Term:</h4>
-								<p class="list-group-item-text"><%= loan.term %> months</p>
-							</div>
-							<div class="list-group-item">
-								<%= link_to "View Details", user_loan_offer_path(username: loan.user.username, id: loan) %>
-							</div>
-							<div class="list-group-item bottom-button">
-								<%= button_to "Add To Cart", cart_items_path(item_id: loan.id), method: 'post', class:"link-button index-page" %>
+						<div class="col-md-3">
+							<div class="list-group">
+								<div class="list-group-item">
+									<h4 class="list-group-item-heading">Offer ID #<%= loan.id %></h4>
+								</div>
+								<div class="list-group-item">
+									<h4 class="list-group-item-heading">Amount:</h4>
+									<p class="list-group-item-text"><%= number_to_currency(loan.amount) %></p>
+								</div>
+								<div class="list-group-item">
+									<h4 class="list-group-item-heading">Interest Rate:</h4>
+									<p class="list-group-item-text"><%= loan.rate %></p>
+								</div>
+								<div class="list-group-item">
+									<h4 class="list-group-item-heading">Term:</h4>
+									<p class="list-group-item-text"><%= loan.term %> months</p>
+								</div>
+								<div class="list-group-item">
+									<%= link_to "View Details", user_loan_offer_path(username: loan.user.username, id: loan) %>
+								</div>
+								<div class="list-group-item bottom-button">
+									<%= button_to "Add To Cart", cart_items_path(item_id: loan.id), method: 'post', class:"link-button index-page" if !current_admin? %>
+								</div>
 							</div>
 						</div>
 					<% end %>
