--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,12 +4,8 @@
 		<div class="col-md-4 stats">
 			<table class="table table-striped table-bordered">
 				<tr>
-					<td>
-						<b>Loan Offerings</b>
-					</td>
-					<td>
-						<b>#</b>
-					</td>
+					<td><b>Loan Offerings</b></td>
+					<td><b>#</b></td>
 				</tr>
 				<tr>
 					<td>Outstanding Loan Offerings</td>
@@ -24,8 +20,7 @@
 					<td><%= number_to_currency("120000") %></td>
 				</tr>
 			<tr>
-				<td colspan="2">
-				</td>
+				<td colspan="2"></td>
 			</tr>
 				<tr>
 					<td>
