--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,14 @@
-<% @users.each do |user| %>
-  <%= link_to user.username, user_path(user.username) %>
-<% end %>
+<div class="mainbody">
+  <div class="container">
+    <h1>All Users</h1>
+    <div class="col-md-3 user-menu">
+      <nav>
+        <ul class="nav nav-pills nav-stacked nav-admin">
+          <% @users.each do |user| %>
+          <li role="presentation"><%= link_to user.username, user_path(user.username) %></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
