--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-3 user-menu">
       <nav>
         <ul class="nav nav-pills nav-stacked nav-admin">
-          <% @users.each do |user| %>
+          <% @active_users.each do |user| %>
           <li role="presentation"><%= link_to user.username, user_path(user.username) %></li>
           <% end %>
         </ul>
