--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -1,13 +1,10 @@
 <div class="cart">
 	<div class="container">
-		<div class="cart-top">
-			<%= link_to "<< home", root_path %>
-		</div>
-
-		<div class="col-md-9 cart-items cart-box"> 
+		<div class="col-md-9 cart-items cart-box">
+			<h1>My Cart:</h1>
 			<table class="table table-striped table-hover">
-				<h2>My Cart: All Loan Requests (<%= @cart.requests_count %>)</h2>
-				
+				<h2>Loan Requests (<%= @cart.requests_count %>)</h2>
+
 				<% @items[0].each do |item| %>
 				<tr><td>
 					<div class="cart-header">
@@ -52,10 +49,10 @@
 		</div>
 	</div>
 
-	<div class="col-md-9 cart-items cart-box"> 
+	<div class="col-md-9 cart-items cart-box">
 			<table class="table table-striped table-hover">
-				<h2>My Cart: All Loan Offers (<%= @cart.offers_count %>)</h2>
-				
+				<h2>Loan Offers (<%= @cart.offers_count %>)</h2>
+
 				<% @items[1].each do |item| %>
 				<tr><td>
 					<div class="cart-header">
