--- a/app/views/user/contracts/index.html.erb
+++ b/app/views/user/contracts/index.html.erb
@@ -5,40 +5,7 @@
         <h2><%= current_user.username.capitalize %>'s Contracts</h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="panel panel-success">
-          <div class="panel-heading">
-            <h4>As a Lender:</h4>
-          </div>
-          <% @l_contracts.each do |c| %>
-            <% present(c) do |contract| %>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                Lender: <%= contract.full_name("lender") %>
-              </li>
-              <li class="list-group-item">
-                Borrower: <%= contract.full_name("borrower") %>
-              </li>
-              <li class="list-group-item">
-                Amount: <%= contract.amount("request") %>
-              </li>
-              <li class="list-group-item">
-                Term: <%= contract.months("request") %>
-              </li>
-              <li class="list-group-item">
-                Rate: <%= contract.ir("request") %>
-              </li>
-              <li class="list-group-item">
-                Status: <%= contract.status %>
-              </li>
-            </ul>
-            <div class="panel-footer">
-            </div>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    </div>
+    <%= render partial: "user/contracts/contracts", locals: { contracts: @b_contracts, request_or_offer: "offered", lender: "Borrower"} %>
+    <%= render partial: "user/contracts/contracts", locals: { contracts: @l_contracts, request_or_offer: "request", lender: "Lender"} %>
   </div>
 </div>
