--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,9 +1,15 @@
 <div class="cart-box">
   <% @loan_requests.each do |lr| %>
-  Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>  
-  Amount: <%= lr.amount %><br>
-  Term: <%= lr.term %> Months<br>
-  Rate: <%= lr.rate %>%<br><br>
-<% end %>
-<%= button_to "Submit", contracts_path, method: 'post' %>
+    Borrower: <%= lr.user.first_name + " "  + lr.user.last_name %><br>
+    Amount: <%= number_to_currency(lr.amount) %><br>
+    Term: <%= lr.term %> Months<br>
+    Rate: <%= lr.rate %>%<br><br>
+  <% end %>
+  <% @loan_offers.each do |lo| %>
+    Borrower: <%= lo.user.first_name + " "  + lo.user.last_name %><br>
+    Amount: <%= number_to_currency(lo.amount) %><br>
+    Term: <%= lo.term %> Months<br>
+    Rate: <%= lo.rate %>%<br><br>
+  <% end %>
+  <%= button_to "Submit", contracts_path, method: 'post' %>
 </div>
