--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -376,3 +376,12 @@ a:hover, a:focus {
 .nav-admin a:hover {
   background-color: blue;
 }
+
+.remove-from-cart {
+  margin-top:-85px;
+  margin-right: -3px !important;
+  width: 30px;
+  border-radius: 5px !important;
+  background: #FF0000 !important;
+  border: 0px !important;
+}
