--- a/app/views/user/contracts/index.html.erb
+++ b/app/views/user/contracts/index.html.erb
@@ -5,7 +5,7 @@
         <h2><%= current_user.username.capitalize %>'s Contracts</h2>
       </div>
     </div>
-    <%= render partial: "user/contracts/contracts", locals: { contracts: @b_contracts, request_or_offer: "offered", lender: "Borrower"} %>
+    <%= render partial: "user/contracts/contracts", locals: { contracts: @b_contracts, request_or_offer: "offer", lender: "Borrower"} %>
     <%= render partial: "user/contracts/contracts", locals: { contracts: @l_contracts, request_or_offer: "request", lender: "Lender"} %>
   </div>
 </div>
