--- a/app/views/shared/_bscript.html.erb
+++ b/app/views/shared/_bscript.html.erb
@@ -1,13 +1,18 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <%= javascript_include_tag "slick.min.js" %>
+<%= javascript_include_tag "jquery.accrue.min.js" %>
 <script type="text/javascript">
   $(document).ready(function(){
+    // image slider on home page
     $('.autoplay').slick({
       slidesToShow: 5,
       slidesToScroll: 5,
       autoplay: true,
       autoplaySpeed: 5000,
     });
+    // set up normal loan calculation
+    $(".calculator-loan").accrue();
+
   });
 </script>
