--- a/app/views/pages/calc.html.erb
+++ b/app/views/pages/calc.html.erb
@@ -2,13 +2,20 @@
   <div class="container">
     <div class="block grey-lighter">
       <div class="wrap">
-        <h2>Basic Loan Calculation</h2>
+
         <div class="calculator-loan">
-  				<div class="thirty form">
-  				</div>
-  				<div class="thirty">
-  					<p><label>Results:</label></p>
-  					<div class="results"></div>
-  				</div>
+          <div class="row">
+            <div class="thirty form col-md-6">
+              <h2 class="panel panel-success panel-heading">Basic Loan Calculation</h2>
+    				</div>
+  				  <div class="thirty col-md-6">
+    					<h2 class="panel panel-success panel-heading">Results</h2>
+    					<div class="results"></div>
+				      </div>
+          </div>
   			</div>
   			<div class="clear"></div>
+      </div>
+    </div>
+  </div>
+</div>
