--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,7 @@
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
         <li><%= link_to "View Loans", "/viewloans" %></li>
         <li><%= link_to "Create Loan", "/createloan" %></li>
+        <li><%= link_to "Payment Calculator", "/calculator" %></li>
         <% if current_user %>
           <li><%= link_to "Log Out", logout_path %></li>
           <li><%= link_to "Dashboard", dashboard_path %></li>
