Add user attributes

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -4,6 +4,7 @@
 		<div class="col-md-4 stats">
       <table class="table table-striped table-bordered">
         <tr>
+
           <td><b>Site Wide Statistics</b></td>
           <td><b>#</b></td>
         </tr>
@@ -37,7 +38,7 @@
           <td>Completed Loan Requests</td>
           <td>13</td>
         </tr>
-
+				<%= image_tag @user.image_path, size: "100" %>
       </table>
     </div>
 		<div>
