--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container form-spacing">
-    <div class="vertical-center-row">
-      <div align="center">
+<div class="container">
+    <div class="vertical-center-row row">
+      <div class="col-md-4 col-md-offset-4">
       <h1>Create an account</h1>
 
       <%= form_for @user do |f| %>
