active loan request

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -35,7 +35,7 @@
         </tr>
         <tr>
           <td>Active Loan Requests</td>
-          <td>253</td>
+          <td><%= LoanRequest.active_loan_requests %></td>
         </tr>
         <tr>
           <td>Completed Loan Requests</td>
