--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -11,6 +11,10 @@ html, body {
   padding-bottom: 20px;
 }
 
+.unmargin {
+  margin-top: -25px !important;
+}
+
 .alert {
   position: fixed;
   top: 100px;
