all user notifications successful

--- a/app/views/user_notifier/contract_notice.html.erb
+++ b/app/views/user_notifier/contract_notice.html.erb
@@ -1,1 +1,1 @@
-A contract was finalized between <%= @lender.first_name + " " + @lender.last_name + "&" + @borrower.first_name + " " + @borrower.last_name %>. Please visit <%= link_to "your dashboard", "thrive-lending.herokuapp.com/dashboard" %> for more details.
+A contract was finalized between <%= @lender.first_name.capitalize + " " + @lender.last_name.capitalize + " & " + @borrower.first_name.capitalize + " " + @borrower.last_name.capitalize %>. Please visit <%= link_to "your dashboard", "thrive-lending.herokuapp.com/dashboard" %> for more details.
