--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
-<div class="container form-spacing">
-    <div class="vertical-center-row">
-      <div align="center">
+<div class="mainbody">
+  <div class="container">
+    <div class="row">
+    <div class="col-md-4 col-md-offset-4">
       <h1>Create an account</h1>
 
       <%= form_for @user do |f| %>
@@ -16,6 +17,7 @@
       <%= f.submit "Create Account", class:"btn btn-primary"%>
 
       <% end %>
+      </div>
     </div>
-    </div>
+  </div>
 </div>
