--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -15,6 +15,12 @@ html, body {
   margin-top: -25px !important;
 }
 
+.deactivate {
+  margin-top: -15px;
+  margin-left: 10px !important;
+  float: none !important;
+}
+
 .alert {
   position: fixed;
   top: 100px;
