--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,9 +10,9 @@
           <li><%= link_to "Dashboard", dashboard_path %></li>
         <% else %>
           <li><%= link_to "Log In", login_path %></li>
-          <li><a href="#">Register</a></li>
+          <li><%= link_to "Register", new_user_path %></li>
         <% end %>
-      <li><%= link_to "Cart", cart_path  if !current_admin? %></li>
+      <li><%= link_to "Cart", cart_path %></li>
       </ul>
   </div>
 </header>
